--- a/_config.yml
+++ b/_config.yml
@@ -113,3 +113,10 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
+ 
+ 
+analytics:
+  provider: "google-gtag"
+  google:
+    tracking_id: "G-PRE3Y7FXE1"
+    anonymize_ip: false # default
